# Graphic_lab1

./: Readme
CG1_Assign/: Light.h  Shader.h
CG1_Assign/data/: duck.d2  ground.d2
CG1_Assign/shaders/: model_shader.frag  model_shader.vert
CG1_Assign4/: CMakeLists.txt  Camera.h  Light.h  Model.h  main.cpp
CG1_Assign4/data/: test.d2  wall.d2
CG1_Assign4/shaders/: constant_shader.vert  gouraud_shader.frag  gouraud_shader.vert  phong_shader.frag  phong_shader.vert
Graphic/: main.cpp
Graphic.xcodeproj/: project.pbxproj
Graphic.xcodeproj/xcuserdata/niklaus_yi.xcuserdatad/xcschemes/: Graphic.xcscheme  xcschememanagement.plist
YiTu_LAB2.5/: CMakeLists.txt  drawWall.h  main.cpp  math.h  model.h  texture.h
YiTu_Lab3/: CMakeLists.txt  Camera.h  Model.h  main.cpp
YiTu_Lab3/shaders/: light.frag  light.vert
